--- a/myproject/blog/templates/base.html
+++ b/myproject/blog/templates/base.html
@@ -7,9 +7,14 @@
     <title>{% block title %}Блог{% endblock %}</title>
 
     <!-- Подключение Bootstrap 5 -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous"
+    />
 
     <!-- Блок для дополнительных стилей и скриптов в head -->
     {% block head %}{% endblock %}
@@ -47,9 +52,6 @@
             <p>&copy; 2024</p>
         {% endblock %}
     </footer>
-
-    <!-- Подключение Bootstrap JS и других JavaScript файлов -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
